--- a/app/package.json
+++ b/app/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/react": "^9.4.0",
+    "axios": "^0.19.2",
     "lorem-ipsum": "2.0.3",
+    "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-test-renderer": "^16.12.0",
-    "react-testing-library": "^8.0.1",
     "sinon": "^8.1.1",
     "three": "^0.113.2"
   },
